--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,86 @@
-version: '3'
+#version: '3'
+#
+#services:
+#  web:
+#    build: .
+#    env_file:
+#      - .env
+#    command: bash -c "
+#      uvicorn app.main:app
+#      --host 0.0.0.0 --port 8989
+#      --lifespan=on --use-colors --loop uvloop --http httptools
+#      --log-config=log-conf.yaml
+#      --reload
+#      "
+#    volumes:
+#      - .:/app
+#    ports:
+#      - "8989:8989"
+#    depends_on:
+#      - mongodb
+#
+#  mongodb:
+#    image: mongo:latest
+#    env_file:
+#      - .env
+#    ports:
+#      - "27017:27017"
+#    environment:
+#      - "MONGO_INITDB_DATABASE=${MONGO_DB}"
+#      - "MONGO_INITDB_ROOT_USERNAME=${MONGO_USER}"
+#      - "MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASS}"
+#    command:
+#      mongod --quiet --logpath /dev/null
 
+version: '3'
 services:
-  web:
-    build: .
-    env_file:
-      - .env
-    command: bash -c "
-      uvicorn app.main:app
-      --host 0.0.0.0 --port 8989
-      --lifespan=on --use-colors --loop uvloop --http httptools
-      --log-config=log-conf.yaml
-      --reload
-      "
+  app:
+    depends_on:
+      - mongo
+    links:
+      - mongo
+    # If you need to connect to your db from outside this container
+#    network_mode: host
+    build:
+      context: .
+      dockerfile: Dockerfile
+    tty: true
+    command: sh
     volumes:
       - .:/app
+    expose:
+      - 8000
     ports:
-      - "8989:8989"
-    depends_on:
-      - mongodb
-
-  mongodb:
-    image: mongo:latest
-    env_file:
-      - .env
-    ports:
-      - "27017:27017"
+      - 8000:8000
+  mongo:
+    image: mongo
+    restart: always
     environment:
-      - "MONGO_INITDB_DATABASE=${MONGO_DB}"
-      - "MONGO_INITDB_ROOT_USERNAME=${MONGO_USER}"
-      - "MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASS}"
-    command:
-      mongod --quiet --logpath /dev/null
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+    ports:
+      - 127.0.0.1:27017:27017
+    volumes:
+      - ./data/db:/data/db
+
+#  mongodb:
+#    image: mongo:latest
+#    volumes:
+#      - mongo-data:/data/db
+##      - mongo-configdb:/data/configdb
+#      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
+#    ports:
+#      - "27017:27017"
+#    environment:
+#      - MONGO_INITDB_ROOT_USERNAME=admin
+#      - MONGO_INITDB_ROOT_PASSWORD=f3MdBEcz
+#      - MONGODB_DATABASE=sample_db
+#      - MONGODB_USER=some_user
+#      - MONGODB_PASSWORD=random_pass
+#      - MONGODB_HOST_NAME=localhost
+#      - MONGODB_PORT=27017
+#    command: [--auth]
+
+#volumes:
+#  mongo-data:
+#  mongo-configdb:
