--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@
 #    command:
 #      mongod --quiet --logpath /dev/null
 
-version: '3'
+version: '3.9'
 services:
   app:
     depends_on:
@@ -45,7 +45,7 @@ services:
       context: .
       dockerfile: Dockerfile
     tty: true
-    command: sh
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000
     volumes:
       - .:/app
     expose:
